SERVER-50890 Improve failover management when completing migrations